--- a/aura/index.html
+++ b/aura/index.html
@@ -1,79 +1,168 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Page</title>
+    <title>INICIO</title>
 </head>
 
 <body>
+    <a href="#main">Contenido principal</a>
     <header>
-        <h1>Discover Our New Collection</h1>
-        <p>Timeless Elegance, Modern Design</p>
-        <a href="">
-            <button>Shop Now</button>
-        </a>
+        <h1>AURA</h1>
+        <nav aria-label="Navegación principal">
+            <ul>
+                <a href="#main">
+                    <li>Inicio</li>
+                </a><a href="listado.html">
+                    <li>Catalogo</li>
+                </a><a href="carrito.html">
+                    <li>Carrito</li>
+                </a><a href="contacto.html">
+                    <li>Contacto</li>
+                </a>
+            </ul>
+        </nav>
     </header>
+    <main id="main">
+        <section id="hero">
+            <h1>Descubre nuestra nueva colección</h1>
+            <figure>
+                <img src="" alt="">
+                <figcaption>AURA JOYERIA</figcaption>
+                <!-- figure opcional, solo usar si se añade un pie de foto (figcaption) -->
+            </figure>
+            <p>Diseño atemporal, diseño elegante</p>
+            <a href="listado.html"><button>Compra Ahora</button></a>
+        </section>
+        <section id="productos">
+            <section id="masPopulares">
+                <h2>Productos Populares (PP)</h2>
+                <article class="tarjeta">
+                    <a href="producto.html">
+                        <img src="" alt="">
+                        <h3>Anillo solitario de diamante</h3>
+                        <p>Un bonito anillo con un diamante</p>
+                        <p>
+                            Valoración:
+                            <p>⭐⭐⭐⭐</p>
+                            <meter value="4.8" min="0" max="5">4.8/5</meter>
+                        </p>
+                    </a>
+                </article>
+                <article>
+                    <a href="producto.html">
+                        <img src="" alt="">
+                        <h3>Anillo solitario de diamante</h3>
+                        <p>Un bonito anillo con un diamante</p>
+                        <p>
+                            Valoración:
+                            <p>⭐⭐⭐⭐</p>
+                            <meter value="4.8" min="0" max="5">4.8/5</meter>
+                        </p>
+                    </a>
+                </article>
+                <article>
+                    <a href="producto.html">
+                        <img src="" alt="">
+                        <h3>Anillo solitario de diamante</h3>
+                        <p>Un bonito anillo con un diamante</p>
+                        <p>
+                            Valoración:
+                            <p>⭐⭐⭐⭐</p>
+                            <meter value="4.8" min="0" max="5">4.8/5</meter>
+                        </p>
+                    </a>
+                </article>
+                <article>
+                    <a href="producto.html">
+                        <img src="" alt="">
+                        <h3>Anillo solitario de diamante</h3>
+                        <p>Un bonito anillo con un diamante</p>
+                        <p>
+                            Valoración:
+                            <p>⭐⭐⭐⭐</p>
+                            <meter value="4.8" min="0" max="5">4.8/5</meter>
+                        </p>
+                    </a>
+                </article>
+            </section>
+            <section id="categorias">
+                <h2>Categorías</h2>
+                <ul>
+                    <li>
+                        <article>
+                            <a href="listado.html#anillos">
+                                <img src="media/img/" alt="">
+                                <h3>Anillos</h3>
+                                <p>Exquisitos anillos para cada ocasión.</p>
+                            </a>
+                        </article>
+                    </li>
+                    <li>
+                        <article>
+                            <a href="listado.html#collares">
+                                <img src="media/img/" alt="">
+                                <h3>Collares</h3>
+                                <p>Exquisitos collares para cada ocasión.</p>
+                            </a>
+                        </article>
+                    </li>
+                    <li>
+                        <article>
+                            <a href="listado.html#brazaletes">
+                                <img src="media/img/" alt="">
+                                <h3>Brazaletes</h3>
+                                <p>Exquisitos brazaletes para cada ocasión.</p>
+                            </a>
+                        </article>
+                    </li>
+                    <li>
+                        <article>
+                            <a href="listado.html#pendientes">
+                                <img src="media/img/" alt="">
+                                <h3>Pendientes</h3>
+                                <p>Exquisitos pendientes para cada ocasión.</p>
+                            </a>
+                        </article>
+                    </li>
+                </ul>
+            </section>
+        </section>
 
-    <body>
-        <section id="featured">
-            <h2>Featured Products</h2>
-            <p>Our Most Loved Pieces</p>
+        <section id="sobreNosotros">
+            <article>
+                <p>Información detallada sobre nosotros</p>
+            </article>
+            <section id="multimedia">
+                <h2>Detrás del taller</h2>
+                <article id="video">
+                    <h3>Vídeo: Proceso de creación de una joya</h3>
+                    <video controls width="640px" height="360px">
+                        <source src="media/video/" type="video/mp4">
+                        El navegador no admite vídeo HTML5. Puedes descargarlo <a href="media/video/">aquí</a>
+                    </video>
+                </article>
+                <article id="audio">
+                    <h3>Audio: Entrevista con la diseñadora de joyas</h3>
+                    <audio controls>
+                        <source src="media/audio/" type="audio/mp3">
+                        El navegador no admite audio HTML5. Puedes descargarlo <a href="media/audio/">aquí</a>
+                    </audio>
+                </article>
+            </section>
+        </section>
+        <section id="reserva">
+            <h2>Encuentra tu pieza perfecta</h2>
+            <p>Reserva una consulta personal hoy</p>
+            <a href="cita.html"><button>Reservar una cita</button></a>
+        </section>
 
-            <article>
-                <img src="" alt="">
-                <h3>Diamond Solitaire Ring</h3>
-                <p>An exquisite diamond ring, perfect for engagements.</p>
-            </article>
-            <article>
-                <img src="" alt="">
-                <h3>Sapphire Necklace</h3>
-                <p>A deep blue sapphire necklace that adds a touch of royalty.</p>
-            </article>
-            <article>
-                <img src="" alt="">
-                <h3>Gold Bracelet</h3>
-                <p>A classic gold bracelet, a staple for any jewelry collection.</p>
-            </article>
-            <article>
-                <img src="" alt="">
-                <h3>Pearl Earrings</h3>
-                <p>Elegant pearl earrings for a timeless look.</p>
-            </article>
-        </section>
-        <section id="categories">
-            <article>
-                <img src="" alt="">
-                <h3>Rings</h3>
-                <p>Exquisite rings for every occasion</p>
-            </article>
-            <article>
-                <img src="" alt="">
-                <h3>Necklaces</h3>
-                <p>Adorn your neck with our stunning necklaces</p>
-            </article>
-            <article>
-                <img src="" alt="">
-                <h3>Bracelets</h3>
-                <p>Elegant bracelets to complement your style</p>
-            </article>
-            <article>
-                <img src="" alt="">
-                <h3>Earrings</h3>
-                <p>Beautiful earrings to complete your look</p>
-            </article>
-            <p>With a heritage of craftsmanship and a commitment to quality, we create jewelry that is not just an accessory, but a work of art. Each piece is meticulously crafted to be a timeless treasure.</p>
-        </section>
-        <section id="appointment">
-            <p>Find Your Perfect Piece. Book a Personal Consultation Today</p>
-            <a href="">
-                <button>Book an Appointment</button>
-            </a>
-        </section>
-    </body>
+    </main>
     <footer>
-
+        <p>&copy; 2025 - JOYERÍA AURA</p>
+        <p><strong>Email: hola@aura.com</strong></p>
     </footer>
 </body>
 
